--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,15 @@ html{
 .area{
     padding: 60px 10px;
 }
+.area1{
+    padding: 60px 0px;
+    margin-top: 5px;
+}
 body {
     font-family: 'Poppins';
 }
 .navbar_sec{
-    background-color: var(--w-color-)!important;
+    background-color: var(--w-color)!important;
     box-shadow: 2px 4px 5px rgb(0 0 0 / 20%);
     padding: 5px 0;
 }
@@ -49,10 +53,12 @@ body {
     font-weight: 500;
     line-height: 40px;
     margin-bottom: 20px;
+    text-align: left;
 }
 .hero_content h2{
     font-size: 20px;
     font-weight: 400;
+    text-align: left;
 }
 .hero_btn{
     padding: 6px 20px;
@@ -70,21 +76,21 @@ body {
 }
 
 .bottom_sec{
-    background-color: var(--b-color);
-}
-.bottom_sec_title{
-    text-align: center;
-    color: var(--w-color);
-    font-size: 30px;
-    font-weight: 500;
-}
+    /* background-color: var(--b-color); */
+    background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+  }
+ 
 .data-number{
     color: var(--w-color);
     font-size: 22px;
 
 }
-.custom_card{
- 
+.bottom_sec_title{
+    font-size: 32px;
+    margin-bottom: 40px;
+    font-weight: 500;
+    text-align: center;
+    color: var(--w-color);
 }
 .custom_card_img{
     display: flex;
@@ -113,7 +119,192 @@ font-size: 22px;
     font-size: 20px;
     font-weight: 500;
 }
+.btn1 {
+    padding: 6px 20px;
+    box-shadow: 2px 4px 10px rgb(0 0 0 / 20%);
+    border-radius: 8px;
+    font-weight: 100;
+    background-color: var(--b-color);
+    color: var(--w-color);
+    text-decoration: none;
+}
+.btn1:hover {
+    text-decoration: none;
+}
+.s-title{
+    font-size: 32px;
+    font-weight: 500px;
+    text-align: center;
+    margin-bottom: 40px;
+}
 
+.awards_card{
+    padding: 15px 20px ;
+    margin: 20px;
+    border-radius: 10px;
+    background-color: var(--w-color);
+    box-shadow: 0px 0px 15px rgb(0 0 0 / 20%);
+}
+.awards_img{
+    display: flex;
+    justify-content: center;
+    margin: 5px 0 10px;
+}
+.awards_img img{
+    width: 100%;
+    height: auto;
+    max-width: 100px;
+}
+.awards_content .awards_card_title{
+    font-size: 16px;
+    text-align: center;
+    margin: 15px 0;
+}
+.awards_sec_content{
+    z-index: 99;
+}
+.awards_content p{
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+}
+.awards_title{
+    font-size: 32px;
+    color:   linear-gradient(
+        60deg
+        , rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+    max-width: 650px;
+    margin-bottom: 20px;
+}
+.awards_para{
+    font-size: 15px;
+    margin-top: 40px;
+    max-width: 470px;
+    line-height: 20px;
+}
+
+ 
+
+.header {
+    position:relative;
+    /* text-align:center; */
+    background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+    color:white;
+  }
+  .logo {
+    width:50px;
+    fill:white;
+    padding-right:15px;
+    display:inline-block;
+    vertical-align: middle;
+  }
+  
+  .inner-header {
+    height:65vh;
+    width:100%;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .flex { /*Flexbox for containers*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .waves {
+    position:relative;
+    width: 100%;
+    height:15vh;
+    margin-bottom:-7px; /*Fix for safari gap*/
+    min-height:100px;
+    max-height:150px;
+  }
+  
+ 
+  
+  /* Animation */
+  
+  .parallax > use {
+    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+  }
+  .parallax > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+  }
+  .parallax > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+  }
+  .parallax > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+  }
+  .parallax > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+  }
+  @keyframes move-forever {
+    0% {
+     transform: translate3d(-90px,0,0);
+    }
+    100% { 
+      transform: translate3d(85px,0,0);
+    }
+  }
+  /*Shrinking for mobile*/
+  @media (max-width: 768px) {
+    .waves {
+      height:40px;
+      min-height:40px;
+    }
+    .content {
+      height:30vh;
+    }
+  
+  }
+
+
+
+
+  .header_1 {
+    font-size: 32px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    /* text-align: center; */
+    color: #f35626;
+    background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-animation: hue 10s infinite linear;
+  }
+  @-webkit-keyframes hue {
+    from {
+      -webkit-filter: hue-rotate(0deg);
+    }
+    to {
+      -webkit-filter: hue-rotate(-360deg);
+    }
+  }
+  
+  .card_glass {
+    position: relative;
+    padding: 20px;
+    width: 280px;
+    margin: 30px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+  }
+  
+ 
 
 
 
