--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,6 +304,7 @@ font-size: 22px;
     backdrop-filter: blur(5px);
   }
   
+  
   .glass{
     position: relative;
     padding: 40px 20px;
@@ -350,18 +351,188 @@ font-size: 22px;
   .founder{
     font-size: 16px;
     color: var(--w-color);
+    text-transform: uppercase
+  }
+  .cfounder{
+    font-size: 16px;
+    color: var(--w-color);
+    opacity: .8;
+    text-transform: uppercase;
   }
 
+.ccfounder{
+  display: flex;
+}
+.ccfounder li{
+  list-style: none;
+  margin-right: 30px;
+}
+.sociallinks{
+  margin: 10px 0 0px;
+}
+.sociallinks span{
+  font-size: 16px;
+  color: var(--w-color);
+  opacity: .6;
 
+}
+.sociallinks ul{
+  display: flex;
+  margin: 0px 0 0px;
+}
+.sociallinks ul li{
+  list-style: none;
+  padding: 10px 10px 10px 0;
+}
+.sociallinks ul li a{
+  color: var(--w-color);
+  margin: 10px 5px;
+}
+.sociallinks ul li a i{
+  font-size: 25px;
+}
 
+.contact_mail{
+  background: var(--b-color);
+  color: var(--w-color);
+  padding: 5px 20px;
+  margin: 0px 0 0px;
+  border-radius: 4px;
 
+}
+.contact_mail:hover{
+  color: var(--w-color);
+  text-decoration: none;
+}
 
+.contact_link img{
+ max-width: 140px;
+ margin-left: 5px;
+}
+
+.mailsec{
+  display: flex;
+  align-items: center;
+}
+.aititle{
+  text-align: center;
+  margin-bottom: 20px;
+}
+.ai_col{
+  border: 1px solid #E1E1E1;
+  height: 400px;
+}
+.ai_bg{
+  padding: 0;
+  overflow: hidden;
+}
+.ai_img{
+  position: relative;
+  width: inherit;
+  height: inherit;
+  filter: blur(2px);
+}
+
+.typewrite{
+  text-align: center;
+  text-decoration: none;
+  padding: 20px;
+  position: absolute;
+  left: 20px;
+  top: 40%;
+  z-index: 99;
+}
+
+.wrap{
+  color: #fff;
+  font-size: 26px;
+}
+.ai_box{
+  padding: 20px;
+
+}
+
+.ai_box p{
+  font-size: 16px;
+  color: #000;
+}
+.ai_btn{
+  background-color: var(--b-color);
+  color: var(--w-color);
+  border: none;
+  border-radius: 4px;
+  padding: 5px 25px;
+  text-decoration: none;
+  box-shadow: 2px 4px 10px rgb(0 0 0 / 20%)
+}
+.ai_btn:hover{
+  color: var(--w-color);
+  text-decoration: none;
+}
+
+.company_name_box a{
+  color: var(--w-color);
+  opacity: .7;
+}
+.company_name_box a:hover{
+  text-decoration: none;
+}
+.conpany_name{
+  color: var(--w-color);
+  margin-bottom: 15px;
+}
+.follow_title{
+  font-size: 18px;
+  color: var(--w-color);
+  margin-bottom: 15px;
+}
+.followlinks{
+  display: flex;
+}
+.followlinks li{
+  list-style: none;
+}
+.followlinks li a i{
+  color: var(--w-color);
+  padding: 5px;
+  font-size: 22px;
+  margin: 10px 10px 10px 0 ;
+}
+.copyright{
+  font-size: 14px;
+  color: var(--w-color);
+  opacity: .7;
+  text-align: center;
+  margin-top: 20px;
+}
+.area2{
+  padding: 60px 0 20px;
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+}
+.navbox ul li{
+list-style: none;
+}
+.navbox ul li a{
+  color: var(--w-color);
+  opacity: .7;
+}
+.navbox ul li a:hover{
+color: var(--w-color);
+}
+
+.ccmob{
+  display: flex;
+  justify-content: center;
+}
 
   @media (min-width: 600px) and (max-width: 768px) { 
     .imgbox img{
       height: 300px;
       width: 300px;
  }
+ .ccmob{
+  display: block;
+}
   }
 
 
@@ -391,4 +562,10 @@ font-size: 22px;
       height: 260px;
       width: 260px;
  }
+ .ccfounder{
+  display: block;
+}
+.ccmob{
+  display: block;
+}
 }
