--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -524,6 +524,84 @@ color: var(--w-color);
   display: flex;
   justify-content: center;
 }
+.careers_title{
+  text-transform: capitalize;
+  font-size: 20px;
+  color: var(--w-color);
+}
+
+.careers_main_title{
+  text-transform: capitalize;
+  font-size: 65px;
+  color: var(--w-color);
+}
+.careers_box{
+  padding-top: 70px;
+}
+#careers{
+  background-image: url("../img/Pearlysight-img-15.jpg");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  /* height: 100vh; */
+}
+.careers_cards{
+  background-color: var(--w-color);
+  padding: 20px 40px;
+  margin: 5px;
+  border-radius: 4px;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
+}
+.careers_card_img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  height: 140px;
+  background-color: #E1E1E1;
+  border-radius: 50%;
+}
+.careers_card_img img{
+  width: 60px;
+  height: 60px;
+}
+.careers_card_content{
+  margin: 10px 0;
+}
+.careers_card_title{
+  font-size: 18px;
+  text-align: center;
+  padding-top: 10px;
+}
+.careers_row{
+  margin-top: 40px;
+}
+.resume{
+  background-color: var(--w-color);
+  text-align: center;
+  padding: 8px 48px;
+  border-radius: 6px;
+  border: none;
+  text-decoration: none;
+  color: #000;
+  font-size: 16px;
+  margin-top: 20px;
+}
+.resume:hover{
+  color: #000;
+  text-decoration: none;
+}
+
+
+
+
+
+
+
+
+.navbar-nav .active a{
+  color: var(--b-color)!important;
+}
+ 
 
   @media (min-width: 600px) and (max-width: 768px) { 
     .imgbox img{
@@ -532,11 +610,47 @@ color: var(--w-color);
  }
  .ccmob{
   display: block;
+  margin-bottom: 20px;
+}
+#careers{
+  height: auto;
+  background-size: 200% 100%;
+}
+.tab_mar_top_30{
+  margin-top: 30px;
+}
+.navbar-nav .active a{
+  color: var(--b-color)!important;
 }
   }
 
 
 @media (min-width: 10px) and (max-width: 600px) { 
+  .caresec{
+   padding-top: 100px;
+  }
+  .nav-link {
+    margin: 2px 0;
+    text-align: center;
+  }
+  .navbar-nav .active a{
+    color: var(--b-color)!important;
+  }
+  .custom_nav a{
+    font-size: 20px;
+    margin: 8px 0;
+  }
+  .careers_main_title{
+    font-size: 40px;
+  }
+  #careers{
+    height: auto;
+    background-size: 200% 100%;
+  }
+  .careers_box{
+    padding-top: 30px;
+  }
+
     .mobspace_10{
         margin-top: 10px;
     }
@@ -567,5 +681,6 @@ color: var(--w-color);
 }
 .ccmob{
   display: block;
+  margin-bottom: 20px;
 }
 }
